<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/facebook"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#039BE5"
        android:textStyle="bold"
        app:fontFamily="@font/comic_neue_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontFamily="@font/comic_neue_bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/connect"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <EditText
        android:id="@+id/email_edit_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="16dp"
        android:textColor="@android:color/black"
        app:fontFamily="@font/comic_neue_regular"
        app:layout_constraintTop_toBottomOf="@id/connect"/>

    <EditText
        android:id="@+id/password_edit_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        app:fontFamily="@font/comic_neue_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_tv" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontFamily="@font/comic_neue_bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/error_message"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="visible"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_tv" />



    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message" />

        <RelativeLayout
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/resend_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/new_to_facebook"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:fontFamily="@font/comic_neue_bold" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/resend_email_tv"
                android:text="@string/register"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#039BE5"
                app:fontFamily="@font/comic_neue_bold" />



        </RelativeLayout>






</androidx.constraintlayout.widget.ConstraintLayout>