<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_scrollFlags="scroll|enterAlways"
    tools:context=".fragments.HomeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

            <TextView
                android:id="@+id/facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comic_neue_bold"
                android:text="@string/facebook"
                android:textColor="#304FFE"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/clone_mode"
                android:padding="8dp"
                android:text="@string/clone_mode"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/comic_neue_regular"
                app:layout_constraintBottom_toBottomOf="@+id/facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/facebook" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/status_comment"
                android:fontFamily="@font/comic_neue_light"
                android:padding="8dp"
                android:text="@string/write_something"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/profile_pic_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_pic_toggle"
                app:layout_constraintTop_toTopOf="@+id/profile_pic_toggle" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic_toggle"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:listitem="@layout/layout_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>











